Harden ICHOR entropy path and add devnet preflight tooling

--- a/packages/nextjs/.env.local.example
+++ b/packages/nextjs/.env.local.example
@@ -7,3 +7,10 @@ REPLICATE_API_TOKEN=your_replicate_token_here
 
 # Admin Secret for UCF admin operations (verify fighters, etc.)
 ADMIN_SECRET=your_admin_secret_here
+
+# Optional entropy mode for Ichor Shower
+ICHOR_ENTROPY_ENABLED=false
+ICHOR_ENTROPY_PROGRAM_ID=entropy_program_pubkey_here
+ICHOR_ENTROPY_VAR=entropy_var_pubkey_here
+ICHOR_ENTROPY_PROVIDER=entropy_provider_pubkey_here
+ICHOR_ENTROPY_AUTHORITY=entropy_var_authority_pubkey_here
