--- a/packages/nextjs/.env.example
+++ b/packages/nextjs/.env.example
@@ -26,6 +26,15 @@ NEXT_PUBLIC_ICHOR_TOKEN_PROGRAM=# ICHOR Token program ID (default: 8CHYSuh1Y3F83
 # Vault
 NEXT_PUBLIC_RUMBLE_VAULT_ADDRESS=# PDA vault address for rumble bets/escrow
 
+# Optional: external entropy for Ichor Shower (recommended for production fairness)
+# When enabled, server will configure on-chain entropy settings and pass entropy accounts
+# into checkIchorShower settlement calls.
+ICHOR_ENTROPY_ENABLED=# true | false
+ICHOR_ENTROPY_PROGRAM_ID=# Entropy program ID (e.g., entropy_api program)
+ICHOR_ENTROPY_VAR=# Entropy var account public key
+ICHOR_ENTROPY_PROVIDER=# Authorized entropy provider public key
+ICHOR_ENTROPY_AUTHORITY=# Entropy var authority pubkey (must match Var.authority)
+
 # -----------------------------------------------------------------------------
 # Image Generation (Replicate)
 # -----------------------------------------------------------------------------
