feat(rumble): auto-fill queue with house bots until real fighters arrive

--- a/packages/nextjs/.env.example
+++ b/packages/nextjs/.env.example
@@ -33,6 +33,9 @@ RUMBLE_COMBAT_DURATION_MS=# Safety max combat duration (default: 300000)
 RUMBLE_PAYOUT_DURATION_MS=# Payout display window (default: 30000)
 RUMBLE_TICKS_PER_INVOCATION=# Tick burst size for /api/rumble/tick (default: 8)
 RUMBLE_TICK_BURST_INTERVAL_MS=# Delay between burst ticks (default: 1000)
+RUMBLE_HOUSE_BOTS_ENABLED=# true | false (default: false). Auto-fill queue with house bots when no real fighters are present.
+RUMBLE_HOUSE_BOT_IDS=# Comma-separated fighter IDs pre-registered in ucf_fighters (example: id1,id2,...)
+RUMBLE_HOUSE_BOT_TARGET_POPULATION=# Desired total house fighters across queue+active slots when idle (default: 8)
 
 # Vault
 NEXT_PUBLIC_RUMBLE_VAULT_ADDRESS=# PDA vault address for rumble bets/escrow
