feat(house-bots): add secure deterministic house bot service and provisioning

--- a/packages/nextjs/.env.example
+++ b/packages/nextjs/.env.example
@@ -36,6 +36,11 @@ RUMBLE_TICK_BURST_INTERVAL_MS=# Delay between burst ticks (default: 1000)
 RUMBLE_HOUSE_BOTS_ENABLED=# true | false (default: false). Auto-fill queue with house bots when no real fighters are present.
 RUMBLE_HOUSE_BOT_IDS=# Comma-separated fighter IDs pre-registered in ucf_fighters (example: id1,id2,...)
 RUMBLE_HOUSE_BOT_TARGET_POPULATION=# Desired total house fighters across queue+active slots when idle (default: 8)
+UCF_WEBHOOK_SHARED_SECRET=# Shared HMAC secret for outbound webhook signatures (X-UCF-Signature)
+HOUSE_BOT_REQUIRE_SIGNATURE=# true | false (default: true if UCF_WEBHOOK_SHARED_SECRET is set)
+HOUSE_BOT_SIGNATURE_MAX_SKEW_SECONDS=# Max allowed webhook timestamp skew for house bot verification (default: 300)
+HOUSE_BOT_ALLOWED_FIGHTER_IDS=# Optional comma-separated fighter allowlist for /api/house-bot/fight
+HOUSE_BOT_STRATEGY_SEED=# Secret seed for deterministic house-bot move generation (defaults to UCF_WEBHOOK_SHARED_SECRET)
 
 # Vault
 NEXT_PUBLIC_RUMBLE_VAULT_ADDRESS=# PDA vault address for rumble bets/escrow
