--- a/.vercelignore
+++ b/.vercelignore
@@ -1,8 +1,3 @@
-node_modules/
-packages/*/node_modules/
-packages/nextjs/.twa-build/
-packages/nextjs/*.apk
-packages/nextjs/*.idsig
-packages/nextjs/android-keystore*.jks
-packages/nextjs/.next/
-artifacts/
+node_modules
+.git
+packages/solana/target
